// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElementsWrapper snapshots should render ElementsWrapper 1`] = `
<DocumentFragment>
  children
</DocumentFragment>
`;

exports[`ElementsWrapper snapshots should render with drop anchors 1`] = `
<DocumentFragment>
  <div
    class="drop-anchors"
  >
    children
  </div>
</DocumentFragment>
`;
